# loac_benchmark

./: .gitignore  Makefile  README.md  analysis_results.txt  analyze_validation_scores.py  dump  pyproject.toml  run_pipeline.py  test_validation.py
.claude/commands/: plan-then-execute.md
data/extracted/: rules.json
data/validated/: questions.json  questions_rejected.json  questions_sample_for_review.json  validation_report.json
data_sample/evaluation/: eval_responses.json  eval_scored.json  scoring_analysis.txt
data_sample/extracted/: rules.json  sections.json
data_sample/validated/: benchmark_questions.csv  questions.json  questions_rejected.json  validation_analysis.txt  validation_report.json
docs/issues/: guidance.md
docs/issues/loac-qa-pipeline/: IMPLEMENTATION_PLAN.md  PHASE_1_DETAILED.md  PHASE_2_DETAILED.md  PHASE_3_DETAILED.md  PHASE_4_DETAILED.md  PHASE_4_REFACTOR_SUMMARY.md  PHASE_5_DETAILED.md  PHASE_6_DETAILED.md  PHASE_7_DETAILED.md  PHASE_8_DETAILED.md  PHASE_9_DETAILED.md
src/: config.py  extract.py  openai_client.py  rules.py
src/cli/: __init__.py  commands.py  parser.py  utils.py
src/pipeline/: evaluate.py  export.py  extract.py  generate.py  parse.py  score.py  util.py  validate.py
tests/: test_cli.py  test_evaluate.py  test_export.py  test_extract.py  test_generate.py  test_parse.py  test_rules.py  test_score.py  test_validate.py
