[project]
name = "loac-qa-pipeline"
version = "0.1.0"
description = "LOAC QA Pipeline"
authors = [
    { name = "Jim Carlson" }
]
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.25.1",
    "openai>=2.2.0",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
