[project]
name = "loac-qa-pipeline"
version = "0.1.0"
description = "LOAC QA Pipeline"
authors = [
    { name = "Jim Carlson" }
]
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.25.1",
    "openai>=2.2.0",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
